# Crossing-Minimization-Heuristics-for-Straight-Line-Graph-Drawings

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  STEP 0 PROJECT.md
src/: main.cpp
src/data/: README.TXT
src/data/full_dataset/graphswith100nodes/: ug1.100  ug11.100  ug12.100  ug13.100  ug14.100  ug15.100  ug16.100  ug17.100  ug18.100  ug19.100  ug2.100  ug20.100  ug21.100  ug22.100  ug23.100  ug24.100  ug25.100  ug26.100  ug27.100  ug28.100  ug29.100  ug3.100  ug30.100  ug31.100  ug32.100  ug33.100  ug34.100  ug35.100  ug36.100  ug37.100  ug38.100  ug39.100  ug4.100  ug40.100  ug41.100  ug42.100  ug43.100  ug44.100  ug45.100  ug46.100  (+57 more)
src/data/full_dataset/graphswith10nodes/: ug1.10  ug13.10  ug14.10  ug15.10  ug19.10  ug21.10  ug28.10  ug29.10  ug3.10  ug30.10  ug31.10  ug32.10  ug33.10  ug34.10  ug35.10  ug36.10  ug37.10  ug38.10  ug4.10  ug41.10  ug45.10  ug54.10  ug70.10  ug71.10  ug74.10  ug75.10  ug9.10
src/data/full_dataset/graphswith11nodes/: ug1.11  ug10.11  ug11.11  ug12.11  ug13.11  ug14.11  ug15.11  ug16.11  ug17.11  ug18.11  ug19.11  ug2.11  ug20.11  ug21.11  ug23.11  ug25.11  ug26.11  ug27.11  ug28.11  ug29.11  ug3.11  ug30.11  ug31.11  ug32.11  ug33.11  ug34.11  ug35.11  ug36.11  ug38.11  ug39.11  ug4.11  ug40.11  ug41.11  ug42.11  ug43.11  ug44.11  ug45.11  ug46.11  ug47.11  ug48.11  (+41 more)
src/data/full_dataset/graphswith12nodes/: ug1.12  ug10.12  ug11.12  ug12.12  ug13.12  ug14.12  ug15.12  ug16.12  ug17.12  ug18.12  ug19.12  ug20.12  ug21.12  ug22.12  ug23.12  ug24.12  ug25.12  ug26.12  ug27.12  ug28.12  ug29.12  ug3.12  ug30.12  ug31.12  ug32.12  ug33.12  ug34.12  ug35.12  ug36.12  ug38.12  ug39.12  ug4.12  ug40.12  ug41.12  ug42.12  ug43.12  ug44.12  ug45.12  ug46.12  ug47.12  (+44 more)
src/data/full_dataset/graphswith13nodes/: ug1.13  ug10.13  ug11.13  ug12.13  ug13.13  ug14.13  ug15.13  ug16.13  ug17.13  ug18.13  ug19.13  ug2.13  ug20.13  ug21.13  ug22.13  ug23.13  ug24.13  ug25.13  ug26.13  ug28.13  ug29.13  ug3.13  ug30.13  ug31.13  ug32.13  ug33.13  ug34.13  ug35.13  ug36.13  ug37.13  ug39.13  ug4.13  ug40.13  ug41.13  ug42.13  ug43.13  ug44.13  ug45.13  ug47.13  ug48.13  (+55 more)
src/data/full_dataset/graphswith14nodes/: ug1.14  ug10.14  ug11.14  ug12.14  ug13.14  ug14.14  ug15.14  ug16.14  ug17.14  ug18.14  ug2.14  ug20.14  ug21.14  ug22.14  ug23.14  ug25.14  ug26.14  ug27.14  ug28.14  ug29.14  ug3.14  ug30.14  ug31.14  ug32.14  ug33.14  ug34.14  ug35.14  ug36.14  ug37.14  ug38.14  ug39.14  ug4.14  ug40.14  ug41.14  ug42.14  ug43.14  ug44.14  ug45.14  ug46.14  ug47.14  (+56 more)
src/data/full_dataset/graphswith15nodes/: ug1.15  ug10.15  ug11.15  ug12.15  ug13.15  ug14.15  ug15.15  ug16.15  ug17.15  ug18.15  ug19.15  ug2.15  ug20.15  ug21.15  ug22.15  ug23.15  ug24.15  ug25.15  ug26.15  ug27.15  ug28.15  ug29.15  ug3.15  ug30.15  ug31.15  ug32.15  ug33.15  ug34.15  ug35.15  ug36.15  ug37.15  ug38.15  ug39.15  ug40.15  ug41.15  ug42.15  ug43.15  ug44.15  ug45.15  ug46.15  (+55 more)
src/data/full_dataset/graphswith16nodes/: ug1.16  ug10.16  ug12.16  ug13.16  ug14.16  ug15.16  ug16.16  ug17.16  ug18.16  ug19.16  ug2.16  ug20.16  ug22.16  ug23.16  ug24.16  ug25.16  ug26.16  ug27.16  ug28.16  ug29.16  ug3.16  ug30.16  ug32.16  ug33.16  ug34.16  ug36.16  ug37.16  ug38.16  ug39.16  ug4.16  ug40.16  ug41.16  ug42.16  ug43.16  ug44.16  ug45.16  ug46.16  ug47.16  ug48.16  ug49.16  (+54 more)
src/data/full_dataset/graphswith17nodes/: ug1.17  ug10.17  ug11.17  ug12.17  ug13.17  ug14.17  ug15.17  ug16.17  ug17.17  ug18.17  ug19.17  ug2.17  ug20.17  ug21.17  ug22.17  ug23.17  ug24.17  ug25.17  ug26.17  ug27.17  ug28.17  ug29.17  ug3.17  ug30.17  ug31.17  ug32.17  ug33.17  ug34.17  ug35.17  ug36.17  ug37.17  ug38.17  ug39.17  ug4.17  ug40.17  ug41.17  ug42.17  ug43.17  ug44.17  ug45.17  (+59 more)
src/data/full_dataset/graphswith18nodes/: ug1.18  ug10.18  ug11.18  ug12.18  ug13.18  ug14.18  ug15.18  ug16.18  ug17.18  ug18.18  ug19.18  ug2.18  ug20.18  ug21.18  ug22.18  ug23.18  ug24.18  ug25.18  ug26.18  ug27.18  ug28.18  ug29.18  ug3.18  ug30.18  ug31.18  ug32.18  ug33.18  ug34.18  ug35.18  ug36.18  ug37.18  ug38.18  ug39.18  ug40.18  ug41.18  ug42.18  ug43.18  ug44.18  ug45.18  ug46.18  (+58 more)
src/data/full_dataset/graphswith19nodes/: ug1.19  ug10.19  ug11.19  ug12.19  ug13.19  ug14.19  ug15.19  ug16.19  ug17.19  ug18.19  ug19.19  ug2.19  ug20.19  ug21.19  ug22.19  ug23.19  ug24.19  ug25.19  ug26.19  ug27.19  ug28.19  ug29.19  ug3.19  ug30.19  ug31.19  ug32.19  ug33.19  ug34.19  ug35.19  ug36.19  ug37.19  ug38.19  ug39.19  ug4.19  ug40.19  ug41.19  ug42.19  ug43.19  ug44.19  ug45.19  (+59 more)
src/data/full_dataset/graphswith20nodes/: ug1.20  ug10.20  ug11.20  ug12.20  ug13.20  ug14.20  ug15.20  ug16.20  ug17.20  ug18.20  ug19.20  ug2.20  ug20.20  ug21.20  ug22.20  ug23.20  ug24.20  ug25.20  ug26.20  ug27.20  ug28.20  ug29.20  ug3.20  ug4.20  ug5.20  ug6.20  ug7.20  ug8.20  ug9.20
src/data/full_dataset/graphswith21nodes/: ug1.21  ug10.21  ug11.21  ug12.21  ug13.21  ug14.21  ug15.21  ug16.21  ug17.21  ug18.21  (+89 more)
src/data/samples/: ug1.50
src/geometry/: FruchtermanReingold_custom.cpp  FruchtermanReingold_custom.h  IntersectionDetector.cpp  IntersectionDetector.hpp  intersection_detector.cpp  intersection_detector.hpp
src/heuristics/: LocalSegment.hpp  RegionBuilder.cpp  RegionBuilder.hpp  RelocationManager.cpp  RelocationManager.hpp
src/heuristics/relocation/: RelocationHelpers.cpp  RelocationHelpers.hpp  RelocationManagerAnalysis.cpp  RelocationManagerCrossings.cpp  RelocationManagerGeometry.cpp
src/logic/: Graph.cpp  Graph.hpp  PlanarizedGraph.cpp  PlanarizedGraph.hpp  SpatialGrid.cpp  SpatialGrid.hpp
src/utils/: GraphLoader.cpp  GraphLoader.hpp
src/visualization/: GraphVisualizer.cpp  GraphVisualizer.hpp
(+6979 files in other folders)
